[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Camera2D.gd" type="Script" id=2]
[ext_resource path="res://Node2D.tres" type="TileSet" id=3]
[ext_resource path="res://Control_script.gd" type="Script" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1

[node name="Timer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 200.0
margin_bottom = 200.0
color = Color( 0.258824, 0.258824, 0.258824, 1 )

[node name="Button" type="Button" parent="CanvasLayer/Control"]
margin_top = 306.0
margin_right = 102.0
margin_bottom = 326.0
rect_pivot_offset = Vector2( 128, -32 )
text = "Start"

[node name="Button2" type="Button" parent="CanvasLayer/Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 103.0
margin_top = -294.0
margin_right = 199.0
margin_bottom = -274.0
text = "Stop"

[node name="Label" type="Label" parent="CanvasLayer/Control"]
margin_left = 8.0
margin_top = 8.0
margin_right = 83.0
margin_bottom = 22.0
text = "Generation:"

[node name="Button3" type="Button" parent="CanvasLayer/Control"]
margin_top = 210.0
margin_right = 200.0
margin_bottom = 230.0
rect_pivot_offset = Vector2( -128, -120 )
text = "New random"

[node name="Button4" type="Button" parent="CanvasLayer/Control"]
margin_top = 234.0
margin_right = 200.0
margin_bottom = 254.0
text = "New empty"

[node name="Label2" type="Label" parent="CanvasLayer/Control"]
margin_left = 8.0
margin_top = 274.0
margin_right = 80.0
margin_bottom = 288.0
text = "Resolution:"

[node name="SpinBox" type="SpinBox" parent="CanvasLayer/Control"]
margin_left = 96.0
margin_top = 266.0
margin_right = 170.0
margin_bottom = 290.0
min_value = 10.0
max_value = 800.0
value = 100.0

[node name="OptionButton" type="OptionButton" parent="CanvasLayer/Control"]
margin_left = 8.0
margin_top = 64.0
margin_right = 96.0
margin_bottom = 84.0
text = "1"

[node name="Label3" type="Label" parent="CanvasLayer/Control"]
margin_left = 8.0
margin_top = 40.0
margin_right = 48.0
margin_bottom = 54.0
text = "Drawing method:"

[node name="Label4" type="Label" parent="CanvasLayer/Control"]
margin_left = 10.0
margin_top = 98.0
margin_right = 50.0
margin_bottom = 112.0
text = "Dimension:"

[node name="SpinBox2" type="SpinBox" parent="CanvasLayer/Control"]
margin_left = 11.0
margin_top = 118.0
margin_right = 85.0
margin_bottom = 142.0
min_value = 1.0
max_value = 2.0
value = 2.0

[node name="Label5" type="Label" parent="CanvasLayer/Control"]
margin_left = 9.0
margin_top = 152.0
margin_right = 49.0
margin_bottom = 166.0
text = "Rule:"

[node name="OptionButton2" type="OptionButton" parent="CanvasLayer/Control"]
margin_left = 10.0
margin_top = 171.0
margin_right = 121.0
margin_bottom = 191.0
